PERN-Stack/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: pern-stack  
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-container
        image: gerrome/pern-store-app_nginx:1
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: pern-stack  
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
