PERN-Stack/node-express.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-express-deployment
  namespace: pern-stack
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-container
        image: gerrome/pern-stack_server:1
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: node-express-service
  namespace: pern-stack  
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - name: http
    port: 80
    targetPort: 3000
