PERN-Stack/react.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ReactDeployment
  labels:
    app: client
spec:
  replicas: 3
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: react-container
        image: gerrome/pern-stack_client:1
        ports:
        - containerPort: 3000        
---
apiVersion: v1
kind: Service
metadata:
  name: ReactService
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
  - name: http
    port: 80
    targetPort: 3000
