PERN-Stack/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: pern-stack  
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1    
spec:
  defaultBackend:
    service:
      name: react-service
      port:
        number: 80
  rules:
  - host: victorifah.20.84.39.184.nip.io
    http:
     paths:
     - path: /?(.*)
       pathType: Prefix
       backend:
         service:
           name: react-service
           port:
             number: 80
